cloud/yaml/svc-my-web-app.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  labels:
    app: my-web-app
    app.kubernetes.io/component: my-web-app
    app.kubernetes.io/instance: my-web-app
  name: my-web-app
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: my-web-app
  sessionAffinity: None
  type: ClusterIP
